# documentLM

./: .env.example  .gitignore  CLAUDE.local.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  conftest.py  dev.sh  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  prod-deploy.sh  pyproject.toml  temp.html  test_tiptap.html  todo.md
.claude/: settings.json
.claude/commands/: speckit.plan.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
docs/: 002-UX-review.md  Lightweight_WYSIWYG_HTMX.md  PRD.md  agents.md  orbstack-deployment-plan.md
migrations/: env.py
migrations/versions/: 1165a94143d4_initial_schema.py  17ae9dac3e73_add_multi_user_support.py  351313c224f9_add_to_node_id_to_comments.py  3899adfca211_add_source_indexing_fields.py  6b34d1e33800_add_user_settings.py  a1b2c3d4e5f6_codemirror_migration.py  a3f2b1c4d5e6_add_chat_messages.py  a4b5c6d7e8f9_add_chat_sessions.py  c4e8f2a1b9d7_add_overview_to_documents.py  d7f3a2e1b8c5_add_content_json_and_selected_node_id.py  e9a1c3f5b2d8_drop_content_json_single_repr.py  f1a2b3c4d5e6_add_file_path_to_sources.py
specs/001-document-workbench-mvp/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/002-source-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ux-improvements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-vector-rag-sources/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-editor-undo-redo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-universal-settings/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-view-add-sources/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/009-multi-user-invite/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-chat-sessions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/writer/: __init__.py  __main__.py  main.py
static/: document-globals.js  editor-utils.js  editor.bundle.js  editor.bundle.js.map  editor.js  style.css  suggestion-utils.js
stitch_designs/: ai_popup.html  document_page.html  landing_page.html
tests/: __init__.py
tests/e2e/: conftest.py  test_tiptap_e2e.py
tests/integration/: test_auth_service.py  test_chat_sessions.py  test_db.py  test_privacy.py  test_rag_pipeline.py  (+2 more)
(+76 files in other folders)
