[project]
name = "writer"
version = "0.1.0"
description = "AI Document Workbench - A document-first AI collaboration tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "google-adk>=0.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "pypdf>=4.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "prosemirror>=0.6.1",
    "markdown-it-py>=4.0.0",
    "nlp-utils",
    "chromadb>=1.5.5",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/writer"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--ignore=tests/integration"
markers = ["integration: requires a live PostgreSQL database (run with docker-compose up -d postgres)"]

[tool.uv.sources]
nlp-utils = { path = "../nlp_utils" }
